fix(common-ui): thumbnailgrid overflow fixes

--- a/plugins-structure/packages/common-ui/src/components/Thumbnail/styles.module.css
+++ b/plugins-structure/packages/common-ui/src/components/Thumbnail/styles.module.css
@@ -33,7 +33,7 @@
 
 .thumbnailGrid {
   display: flex;
-  overflow-y: scroll;
+  overflow-x: auto;
 }
 
 .thumbnailWrapper {
